--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <img src="assets/Logo.png" alt="TechNews logo">
+                <img src="assets/Logo.svg" alt="TechNews logo">
             </div>
 
             <div>
